--- a/index.html
+++ b/index.html
@@ -5,21 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
     <title>study</title>
     <link rel="stylesheet" href="./site/style/style.css">
     <link rel="stylesheet" href="./site/style/navbar.css">
     <link rel="stylesheet" href="./site/style/main.css">
     <link rel="stylesheet" href="./site/style/footer.css">
+
+    <!-- fonts -->
+    <script src="https://kit.fontawesome.com/56e0df62bd.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div class="container">
         <div class="navbar">
-            <div id="theme-toggler">
-                <button id="theme-btn">Theme</button>
+
+            <div class="navtop">
+                <div id="theme-toggler">
+                    <button id="theme-btn">Theme</button>
+                </div>
+                <!-- TODO -->
+                <div class="logo">
+                </div>
+                <div id="menu-btn">
+                    <span><i class="fa-solid fa-bars"></i></span>
+                </div>
             </div>
-            <ul>
+
+            <ul class="nav-items">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="https://github.com/">Github</a></li>
                 <li><a href="#dsa">DSA</a></li>
@@ -35,6 +47,16 @@
                     <div class="code-content">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum iusto iure earum consequuntur, magni, iste recusandae aspernatur vero deserunt mollitia id debitis, suscipit ullam dignissimos pariatur sit! Vitae eveniet sit architecto vero tempora aliquam dicta at nostrum, ut ipsum inventore?
                     </div>
+                    <div class="code-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum iusto iure earum consequuntur, magni, iste recusandae aspernatur vero deserunt mollitia id debitis, suscipit ullam dignissimos pariatur sit! Vitae eveniet sit architecto vero tempora aliquam dicta at nostrum, ut ipsum inventore?
+                    </div>
+                    <div class="code-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum iusto iure earum consequuntur, magni, iste recusandae aspernatur vero deserunt mollitia id debitis, suscipit ullam dignissimos pariatur sit! Vitae eveniet sit architecto vero tempora aliquam dicta at nostrum, ut ipsum inventore?
+                    </div>
+                    <div class="code-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum iusto iure earum consequuntur, magni, iste recusandae aspernatur vero deserunt mollitia id debitis, suscipit ullam dignissimos pariatur sit! Vitae eveniet sit architecto vero tempora aliquam dicta at nostrum, ut ipsum inventore?
+                    </div>
+                    
                     <div class="code-box">
                         
                     </div>
@@ -74,6 +96,7 @@
     </div>
 
 <script src="./site/js/theme.js"></script>
+<script src="./site/js/navbar.js"></script>
 </body>
 
 </html>
