--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
         <div class="navbar">
 
             <div class="navtop">
-                <div id="theme-toggler">
-                    <button id="theme-btn">Theme</button>
-                </div>
-                <!-- TODO -->
-                <div class="logo">
-                </div>
                 <div id="menu-btn">
                     <span><i class="fa-solid fa-bars"></i></span>
+                </div>
+                <!-- TODO -->
+                <div class="logo">DSA SITE</div>
+                <div id="theme-toggler">
+                    <button id="theme-btn">Theme</button>
                 </div>
             </div>
 
