--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 <!-- TODO -->
                 <div class="logo">DSA SITE</div>
                 <div id="theme-toggler">
-                    <button id="theme-btn">Theme</button>
+                    <label class="switch">
+                        <input type="checkbox" checked>
+                        <span class="slider" id="theme-btn"></span>
+                    </label>
                 </div>
             </div>
 
