--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- fonts -->
     <script src="https://kit.fontawesome.com/56e0df62bd.js" crossorigin="anonymous"></script>
 
+    <!-- scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 <body>
     <div class="container">
@@ -120,6 +123,12 @@
 
 <script src="./site/js/theme.js"></script>
 <script src="./site/js/navbar.js"></script>
+
+<script>
+
+
+</script>
+
 </body>
 
 </html>
