--- a/prism.html
+++ b/prism.html
@@ -55,6 +55,9 @@
             .center {
                 width: 100%;
             }
+            .code {
+                font-size: 12px;
+            }
         }
     </style>
 
